--- a/index.html
+++ b/index.html
@@ -6,7 +6,14 @@
         <title>Knots And Locs</title>
         <link rel="stylesheet" type="text/css" href="css/style.css"> 
     </head>
+   
     <body>
-    <script src="js/scripts.js"></script>
-    </body>
+        <header class="page-header">
+            <img src="./img/allBraids2.jpeg" alt="All Braids" class="page__allBraids">
+            <h1 class="app-header">Knots&Locs</h1>
+        </header> 
+        <div class="styles">
+           <script src="js/scripts.js" class="style__items"></script> 
+        </div>
+</body>
 </html>
