--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
    
     <body>
         <header class="page-header">
-            <img src="./img/allBraids2.jpeg" alt="All Braids" class="page__allBraids">
+            <img src="./img/allBraids4.webp" alt="All Braids" class="page__allBraids">
             <h1 class="app-header">Knots&Locs</h1>
         </header> 
         <div class="styles">
