Added ul "style__items"

--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
             <h1 class="app-header">Knots&Locs</h1>
         </header> 
         <div class="styles">
-           <script src="js/scripts.js" class="style__items"></script> 
+            <ul class="style__list"></ul>
+           <script src="js/scripts.js" class="style_item"></script> 
         </div>
 </body>
 </html>
