Change class id for <script>

--- a/index.html
+++ b/index.html
@@ -12,9 +12,11 @@
             <img src="./img/allBraids4.webp" alt="All Braids" class="page__allBraids-img">
             <h1 class="app-header">Knots&Locs</h1>
         </header> 
-        <div class="styles">
+        <div class="hairstyles" style="color: #cccccc;
+        background-image: url(./img/wooden-background2.avif);
+        background-size: cover;">
             <ul class="style__list"></ul>
-           <script src="js/scripts.js" class="style_item"></script> 
+           <script src="js/scripts.js" ></script> 
         </div>
 </body>
 </html>
