--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
         background-image: url(./img/wooden-background2.avif);
         background-size: cover;">
             <ul class="style__list"></ul>
+            <!-- <button class="show-more">Show more</button> -->
+            <!-- <div class="additional-info">More information goes here.</div> -->
            <script src="js/scripts.js" ></script> 
         </div>
 </body>
