Edit syntax for background url index.html

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <h1 class="app-header">Knots&Locs</h1>
         </header> 
         <div class="hairstyles" style="color: #cccccc;
-        background-image: url(./img/wooden-background2.avif);
+        background-image: url('./img/wooden-background2.avif');
         background-size: cover;">
             <ul class="style__list"></ul>
             <!-- <button class="show-more">Show more</button> -->
