--- a/index.html
+++ b/index.html
@@ -12,13 +12,15 @@
             <img src="./img/allBraids4.webp" alt="All Braids" class="page__allBraids-img">
             <h1 class="app-header">Knots&Locs</h1>
         </header> 
-        <div class="hairstyles" style="color: #cccccc;
+        <div id="hairstyles" style="color: #cccccc;
         background-image: url('./img/wooden-background2.avif');
         background-size: cover;">
             <ul class="style__list"></ul>
             <!-- <button class="show-more">Show more</button> -->
             <!-- <div class="additional-info">More information goes here.</div> -->
-           <script src="js/scripts.js" ></script> 
+            <script src="js/promise-polyfill.js"></script>
+            <script src="js/fetch-polyfill.js"></script>
+            <script src="js/scripts.js" ></script> 
         </div>
 </body>
 </html>
