Remove extra div

--- a/index.html
+++ b/index.html
@@ -12,11 +12,12 @@
             <img src="./img/allBraids4.webp" alt="All Braids" class="page__allBraids-img">
             <h1 class="app-header">Knots&Locs</h1>
         </header> 
-        <div id="hairstyles" style="color: #cccccc;
+        
+        <div class="hairstyles" style="color: #cccccc;
         background-image: url('./img/wooden-background2.avif');
         background-size: cover;">
             <ul class="style__list"></ul>
-            <div id="pokemon-container" class="modal"></div>
+            <!-- <div id="pokemon-container" ></div> -->
             <!-- <button class="show-more">Show more</button> -->
             <!-- <div class="additional-info">More information goes here.</div> -->
             <script src="js/promise-polyfill.js"></script>
