--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         background-image: url('./img/wooden-background2.avif');
         background-size: cover;">
             <ul class="style__list"></ul>
-            <!-- <div id="pokemon-container" ></div> -->
+            <div id="modal-container" ></div>
             <!-- <button class="show-more">Show more</button> -->
             <!-- <div class="additional-info">More information goes here.</div> -->
             <script src="js/promise-polyfill.js"></script>
