Added list-group ul index.html

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <div class="hairstyles" style="color: #cccccc;
         background-image: url('./img/wooden-background2.avif');
         background-size: cover;">
-            <ul class="style__list"></ul>
+            <ul class="style__list list-group"></ul>
             <div id="modal-container" ></div>
             
             <!--Polyfills-->
