Add Bootstrap modal pt1

--- a/index.html
+++ b/index.html
@@ -18,7 +18,14 @@
         background-image: url('./img/wooden-background2.avif');
         background-size: cover;">
             <ul class="style__list list-group"></ul>
-            <div id="modal-container" ></div>
+            <div class="modal-fade" id="modal-container" tabindex="-1" role="dialog" >
+                <div class="modal-dialog" role="document">
+                    <div class="modal-content">
+
+                    </div>
+
+                </div>
+            </div>
             
             <!--Polyfills-->
             <script src="js/promise-polyfill.js"></script>
