Changed 'modal-fade' back

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <ul class="style__list list-group"></ul>
         </div>
         <!--Modal-->
-        <div class="modal fade modal-lg" id="modal-container" tabindex="-1" role="dialog" >
+        <div class="modal-fade modal-lg" id="modal-container" tabindex="-1" role="dialog" >
             <div class="modal-dialog-centered modal-lg" role="document">
                 <div class="modal-content">
 
