Added Bootstrap navbar

--- a/index.html
+++ b/index.html
@@ -10,8 +10,10 @@
    
     <body>
         <header class="page-header">
-            <img src="./img/allBraids4.webp" alt="All Braids" class="page__allBraids-img">
-            <h1 class="app-header">Knots&Locs</h1>
+            <nav class="navbar navbar-expand-lg">
+            <img src="./img/allBraids4.webp" alt="All Braids" class="navbar-brand page__allBraids-img">
+            <h1 class="navbar-nav app-header" >Knots&Locs</h1>
+            </nav>
         </header> 
         
         <div class="hairstyles" style="color: #cccccc;
