Refactered all files to dist or src folders

--- a/index.html
+++ b/index.html
@@ -5,19 +5,19 @@
         <meta name="viewpoint" content="width=device-width, initial-scale=1">
         <title>Knots And Locs</title>
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-        <link rel="stylesheet" type="text/css" href="css/style.css"> 
+        <link rel="stylesheet" type="text/css" href="./dist/styles.css"> 
     </head>
    
     <body>
         <header class="page-header">
             <nav class="navbar navbar-expand-lg">
-            <img src="./img/allBraids4.webp" alt="All Braids" class="navbar-brand page__allBraids-img">
+            <img src="./src/img/allBraids4.webp" alt="All Braids" class="navbar-brand page__allBraids-img">
             <h1 class="navbar-nav app-header" >Knots&Locs</h1>
             </nav>
         </header> 
         
         <div class="hairstyles" style="color: #cccccc;
-        background-image: url('./img/wooden-background2.avif');
+        background-image: url('./src/img/wooden-background2.avif');
         background-size: cover;">
             <!--List contains button for modal-->
             <ul class="style__list list-group"></ul>
@@ -31,9 +31,9 @@
         </div>
             
         <!--Polyfills-->
-        <script src="js/promise-polyfill.js"></script>
-        <script src="js/fetch-polyfill.js"></script>
-        <script src="js/scripts.js" ></script> 
+        <script src="./src/js/promise-polyfill.js"></script>
+        <script src="./src/js/fetch-polyfill.js"></script>
+        <script src="./dist/scripts.js" ></script> 
         <!--Bootstrap. Replaced JQuery Slim with JQuery Core for $ajax()/JQuery animations-->
         <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
